busting Doofenshmirtz (the D part)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,7 @@
 			</li>
 		<% } %>
 	</ul>
+	<div><h2>Delete Doofenshmirtz last message</h2><button id="delete">Bust him</button></div>
 	<script src="main.js"></script>
 </body>
 </html>
